istio.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: istio
  namespace: default
spec:
  mtls:
    mode: STRICT
